components-for-to-do-list

--- a/angular-demo-project/src/app/app.component.html
+++ b/angular-demo-project/src/app/app.component.html
@@ -1,5 +1,21 @@
 <div>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, harum labore, veniam vel molestias nemo commodi corrupti tenetur totam voluptates expedita natus nulla rerum iure maiores sequi error libero voluptatibus.
-  </p>
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+    </li>
+  </ul>
+
+  <div class="container-fluid">
+    <h1 class="text-center">To do list by Swayam</h1>
+    <app-to-dos></app-to-dos>
+  </div>
 </div>
